[package]
name = "beam-land-transaction"
version = "0.1.0"
edition = "2024"

[dependencies]
solami = "0.1"
solana-sdk = "3"
solana-commitment-config = "3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
