[package]
name = "grpc-pumpfun-copy-trade"
version = "0.1.0"
edition = "2024"

[dependencies]
solami = "0.1"
solana-sdk = "3"
solana-commitment-config = "3"
pump-rust-client = { version = "0.1.7", features = ["client"] }
solana-sdk-2 = { package = "solana-sdk", version = "2.1.21" }
solana-client-2 = { package = "solana-client", version = "2.1.21" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
bs58 = "0.5"
bincode = "1"
yellowstone-grpc-proto = "12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
