[package]
name = "grpc-raydium-subscribe-trades"
version = "0.1.0"
edition = "2024"

[dependencies]
solami = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
bs58 = "0.5"
yellowstone-grpc-proto = "12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
